# zorba-schema-tools-module

./: CMakeLists.txt
cmake_modules/: FindJNI.cmake
src/: CMakeLists.txt  schema-tools.xq
src/com/zorba-xquery/www/modules/: CMakeLists.txt  options-example.xml  schema-tools-options.xsd  schema-tools.xq
src/com/zorba-xquery/www/modules/schema-tools.xq.src/: JavaVMSingelton.cpp  JavaVMSingelton.h  schema-tools.cpp
src/schema-tools.xq.src/: JavaVMSingelton.cpp  schema-tools.cpp
srcJava/: CMakeLists.txt
srcJava/org/zorbaxquery/modules/schemaTools/: CppInputStream.java  Inst2XsdHelper.java  Xsd2InstHelper.java
test/ExpQueryResults/schema-tools/: inst2xsd-multiTns.xml.res  inst2xsd-opt1.xml.res  inst2xsd-opt2.xml.res  inst2xsd-opt3.xml.res  inst2xsd-simple.xml.res  inst2xsd-tns-default.xml.res  inst2xsd-tns.xml.res  xsd2inst-simple.xml.res  xsd2inst-tns.xml.res
test/Queries/schema-tools/: inst2xsd-err1-badOpt.spec  inst2xsd-err1-badOpt.xq  inst2xsd-multiTns.xq  inst2xsd-opt1.xq  inst2xsd-opt2.xq  inst2xsd-opt3.xq  inst2xsd-simple.xq  inst2xsd-tns-default.xq  inst2xsd-tns.xq  xsd2inst-err1-badOpt.xq  xsd2inst-opt1.xq  xsd2inst-simple.xq  xsd2inst-tns.xq
